# linear-local-mcp

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
src/linear_local_mcp/: __init__.py  __main__.py  reader.py  server.py  store_detector.py
