[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "linear-local-mcp"
version = "0.1.0"
description = "MCP server for fast local access to Linear via the Linear.app macOS cache"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Tomas Hromada", email = "tomas@hey.com" }
]
keywords = ["mcp", "linear", "macos", "cache", "indexeddb"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
    "brotli>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/gyfis/linear-local-mcp"
Repository = "https://github.com/gyfis/linear-local-mcp"
Issues = "https://github.com/gyfis/linear-local-mcp/issues"

[project.scripts]
linear-local-mcp = "linear_local_mcp:main"

[tool.setuptools.packages.find]
where = ["src", "vendor/ccl_chromium_reader", "vendor/ccl_simplesnappy"]

[tool.setuptools.package-dir]
"" = "src"
"ccl_chromium_reader" = "vendor/ccl_chromium_reader/ccl_chromium_reader"
"ccl_chromium_reader.serialization_formats" = "vendor/ccl_chromium_reader/ccl_chromium_reader/serialization_formats"
"ccl_chromium_reader.storage_formats" = "vendor/ccl_chromium_reader/ccl_chromium_reader/storage_formats"
"ccl_simplesnappy" = "vendor/ccl_simplesnappy/ccl_simplesnappy"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]
